--- a/Servicios/Como-blanquear-la-plata.html
+++ b/Servicios/Como-blanquear-la-plata.html
@@ -127,27 +127,27 @@ Como blanquear la plata - Liquido destapa ca&ntilde;erias con sarro
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Liquido-destapacaños-para-wc.html">Liquido destapacaños para wc </a> 
+       <a href="../Servicios/Con-Que-Destapo-Una-Cañeria-en-Palermo.html">Con Que Destapo Una Cañeria en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-Sanitario.html">Destapador Sanitario </a> 
+       <a href="../Destapa-Cañerias/Estrategias-para-Destapacion-cantilde;erias.html">Estrategias para Destapacion cañerias </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
+       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -210,37 +210,17 @@ Como blanquear la plata - Liquido destapa ca&ntilde;erias con sarro
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
+       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Hay-alguna-manera-de-evitar-Destapar-cantilde;erias-de-agua-potable.html">Hay alguna manera de evitar Destapar cañerias de agua potable </a> 
+       <a href="../Destapa-Cañerias/Con-Que-Destapo-Una-Cantilde;eria.html">Con Que Destapo Una Cañeria </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Camara-De-Registro-Cloacal.html">Camara De Registro Cloacal </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-truper-para-taladro.html">Destapacaños truper para taladro </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Lo-Mejor-Para-Destapar-Bantilde;os.html">Lo Mejor Para Destapar Baños </a> 
+       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -250,17 +230,37 @@ Como blanquear la plata - Liquido destapa ca&ntilde;erias con sarro
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
+       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-Cañeria-Con-Grasa-en-Palermo.html">Destapar Cañeria Con Grasa en Palermo </a> 
+       <a href="../Servicios/Destapador-De-Bantilde;o-Precio.html">Destapador De Baño Precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
+       <a href="../Servicios/Como-blanquear-la-plata.html">Como blanquear la plata </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapaciones-A-Domicilio.html">Destapaciones A Domicilio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
