--- a/Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html
+++ b/Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html
@@ -140,27 +140,27 @@ Con Que Destapo Cañerias - Como destapar un inodoro tapado con jabon
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-De-Inodoros.html">Destapador De Inodoros </a> 
+       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapador-De-Cañerias.html">Destapador De Cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-enfrentar-el-desafio-de-Limpiar-tuberia-con-bicarbonato-y-vinagre.html">Como enfrentar el desafio de Limpiar tuberia con bicarbonato y vinagre </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-wc-con-soda-caustica.html">Como destapar un wc con soda caustica </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Pendiente-Cantilde;eria-Cloacal.html">Pendiente Cañeria Cloacal </a> 
+       <a href="../Destapa-Cañerias/Estoy-buscando-consejos-sobre-Destapar-cantilde;erias-con-bicarbonato.html">Estoy buscando consejos sobre Destapar cañerias con bicarbonato </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Mejor-Destapa-Cañerias-en-Palermo.html">Mejor Destapa Cañerias en Palermo </a> 
+       <a href="../Servicios/Bloque-de-plata-en-la-tabla-periodica.html">Bloque de plata en la tabla periodica </a> 
          </li>
 <!--EndPostsList-->
 
@@ -223,27 +223,32 @@ Con Que Destapo Cañerias - Como destapar un inodoro tapado con jabon
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Estoy-tratando-de-descubrir-como-Para-destapar-cantilde;erias-con-grasa.html">Estoy tratando de descubrir como Para destapar cañerias con grasa </a> 
+       <a href="../Servicios/Empresas-Que-Destapen-Cañerias-en-Palermo.html">Empresas Que Destapen Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
+       <a href="../Servicios/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
+       <a href="../Servicios/Desagues-Pluviales-En-Viviendas.html">Desagues Pluviales En Viviendas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-con-acido-muriatico.html">Como destapar un inodoro con acido muriatico </a> 
+       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/El-Plomero-Destapa-Cañerias-en-Palermo.html">El Plomero Destapa Cañerias en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapar-Desague-Pluvial.html">Destapar Desague Pluvial </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -253,27 +258,22 @@ Con Que Destapo Cañerias - Como destapar un inodoro tapado con jabon
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
+       <a href="../Servicios/Camara-De-Inspeccion-Cloacal.html">Camara De Inspeccion Cloacal </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Maquina-Destapa-Cantilde;erias-Electrica.html">Maquina Destapa Cañerias Electrica </a> 
+       <a href="../Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
+       <a href="../Servicios/Destapar-cañerias-con-bicarbonato-de-sodio.html">Destapar cañerias con bicarbonato de sodio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
